--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*===== GOOGLE FONTS =====*/
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@500;600;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;700&display=swap");
 
 /*===== VARIABLES CSS =====*/
 :root {
@@ -7,17 +7,17 @@
   --font-medium: 500;
 }
 
-/*===== Colores =====*/
+/*===== Colors =====*/
 :root {
-  --first-color: #5361ff;
+  --first-color: #70e000;
   --white-color: #fafaff;
   --dark-color: #2a3b47;
   --text-color: #697477;
 }
 
-/*===== Fuente y tipografia =====*/
+/*===== Font =====*/
 :root {
-  --body-font: "Montserrat", sans-serif;
+  --body-font: "Maven Pro", sans-serif;
   --big-font-size: 6.25rem;
   --h2-font-size: 1.25rem;
   --normal-font-size: 0.938rem;
@@ -32,7 +32,7 @@
   }
 }
 
-/*===== Margenes =====*/
+/*===== Margin =====*/
 :root {
   --mb-1: 0.5rem;
   --mb-2: 1rem;
@@ -121,7 +121,7 @@ img {
   top: 0;
   left: 0;
   z-index: var(--z-fixed);
-  background-color: var(--first-color);
+  background-color: black;
 }
 
 /*===== NAV =====*/
@@ -149,7 +149,7 @@ img {
 }
 .nav__link {
   position: relative;
-  color: var(--dark-color);
+  color: #717c89;
 }
 .nav__link:hover {
   color: var(--first-color);
@@ -182,7 +182,7 @@ img {
 /*===== HOME =====*/
 .home {
   position: relative;
-  background-color: var(--first-color);
+  background-color: black;
   overflow: hidden;
 }
 .home__container {
@@ -205,7 +205,7 @@ img {
 .home__scroll-link {
   writing-mode: vertical-lr;
   transform: rotate(-180deg);
-  color: var(--white-color);
+  color: var(--first-color);
 }
 .home__img {
   position: absolute;
@@ -226,7 +226,7 @@ img {
   padding-top: 1rem;
   width: 120px;
   height: 120px;
-  background-color: var(--first-color);
+  background-color: black;
   border-radius: 50%;
   overflow: hidden;
 }
@@ -419,7 +419,7 @@ img {
     color: var(--white-color);
   }
   .nav__link:hover {
-    color: var(--white-color);
+    color: var(--first-color);
   }
   .active::after {
     background-color: var(--white-color);
