--- a/style.css
+++ b/style.css
@@ -254,20 +254,20 @@ img {
 }
 
 .button {
-    display: inline-block;
-    background-color: var(--first-color);
-    color: var(--white-color);
-    padding: 0.75rem 2.5rem;
-    margin-left: auto;
-    margin-top: 25px;
-    border-radius: 0.5rem;
-    border: none;
-    outline: none;
-    font-size: var(--normal-font-size);
-    cursor: pointer;
+  display: inline-block;
+  background-color: var(--first-color);
+  color: var(--white-color);
+  padding: 0.75rem 2.5rem;
+  margin-left: auto;
+  margin-top: 25px;
+  border-radius: 0.5rem;
+  border: none;
+  outline: none;
+  font-size: var(--normal-font-size);
+  cursor: pointer;
 }
 .button:hover {
-background-color: #9ef01a;
+  background-color: #9ef01a;
 }
 /* ===== SKILLS =====*/
 .skills__container {
@@ -295,21 +295,21 @@ background-color: #9ef01a;
 }
 
 /* ===== PORTFOLIO =====*/
-.portfolio{
+.portfolio {
   background-color: var(--white-color);
 }
-.portfolio__container{
+.portfolio__container {
   justify-items: center;
   row-gap: 2rem;
 }
-.portfolio__img{
+.portfolio__img {
   position: relative;
   overflow: hidden;
 }
-.portfolio__img img{
-  border-radius: .5rem;
+.portfolio__img img {
+  border-radius: 0.5rem;
 }
-.portfolio__link{
+.portfolio__link {
   position: absolute;
   bottom: -100%;
   width: 100%;
@@ -317,16 +317,16 @@ background-color: #9ef01a;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-color: rgba(255,255,255,.3);
-  border-radius: .5rem;
+  background-color: rgba(255, 255, 255, 0.3);
+  border-radius: 0.5rem;
   cursor: pointer;
   backdrop-filter: blur(10px);
-  transition: .3s;
+  transition: 0.3s;
 }
-.portfolio__img:hover .portfolio__link{
+.portfolio__img:hover .portfolio__link {
   bottom: 0;
 }
-.portfolio__link-name{
+.portfolio__link-name {
   color: var(--dark-color);
 }
 
@@ -455,30 +455,27 @@ background-color: #9ef01a;
     align-items: center;
   }
 
-  .portfolio__container{
+  .portfolio__container {
     grid-template-columns: repeat(3, 1fr);
     /* grid-template-rows: repeat(2, 1fr); */
     column-gap: 2rem;
     margin: 0px 200px 0px 200px;
-}
+  }
 
   .contact__form {
     width: 360px;
   }
-  .contact__container{
+  .contact__container {
     justify-items: center;
     margin-left: 200px;
-
   }
 }
 
-  .footer__container {
-    grid-template-columns: repeat(3, 1fr);
-    justify-items: center;
-    display: grid;
-    margin-left: 200px;
-
-  }
+.footer__container {
+  grid-template-columns: repeat(3, 1fr);
+  justify-items: center;
+  display: grid;
+  margin-left: 200px;
 }
 
 @media screen and (min-width: 1024px) {
